Reconfigured New advisory page link

--- a/advisaryMaker.html
+++ b/advisaryMaker.html
@@ -37,6 +37,8 @@
                 <option value="Support">Support</option>
               </select>
         </div>
+        <div>Description:</div>
+        <div><textarea id="descriptionArea" style="width: 500px;"></textarea></div>
         <div>Motives and Tactics:<input type="text" id="motives" style="width: 400px;"></div>
         <div>Tier:
             <select id="tier">
