Added loop functions. Reconfigured for screens

--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
 </head>
 <body>
     <div>
+        <div class="banner-header">Header Test</div>
         <div id="search-container" class = "leftpane">
             <div><input type="text" id="searchInput" placeholder="Search advisaries..."></div>
             <div id="preview-card"></div>
             <div id="advisaries-list-container"></div>
-            <div id="gm-controls"></div>
+            <div id="swapButton" class="button-text" style="width: 75px;" onclick="swapDisplay(this)">Swap</div>
         </div>
         <div id="selected-advisaries-container" class="middlepane"></div>
         <div class="rightpane">
             <button class="right" onclick="addNewCustomAdvisary()">Advisary Editor</button>
+            <div id="gm-controls" class="card"></div>
+            <div id="loops" class="card"></div>
             <div id="advisaries-container"></div>
         </div>
     </div>
