--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="banner-header"><a style="font-size: 25px;">DHTools</a></div>
     <div>
-        <div class="banner-header">Header Test</div>
         <div id="search-container" class = "leftpane">
             <div><input type="text" id="searchInput" placeholder="Search advisaries..."></div>
             <div id="preview-card"></div>
