added header hyperlinks

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="banner-header"><a style="font-size: 25px;">DHTools</a></div>
+    <div class="banner-header">
+        <a style="font-size: 25px;">DHTools</a>
+        <a class="page-link" href="advisaryMaker.html">Advisary Creator</a>
+        <a class="page-link" href="index.html">Advisary Viewer</a>
+    </div>
     <div>
         <div id="search-container" class = "leftpane">
             <div><input type="text" id="searchInput" placeholder="Search advisaries..."></div>
