--- a/advisaryMaker.html
+++ b/advisaryMaker.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="banner-header">
+        <a style="font-size: 25px;">DHTools</a>
+        <a class="page-link" href="advisaryMaker.html">Advisary Creator</a>
+        <a class="page-link" href="index.html">Advisary Viewer</a>
+    </div>
     <div class = "leftpane">
         <div id="advisaries-list-container"></div>
         <div id="gm-controls">
